# regexy

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/utils/: mod.rs
tests/: mod.rs
